doc: we only disable UseBiasedLocking is Java < 15